Work in progress

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -3,6 +3,7 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
+
 body {
   margin: 0;
 }
@@ -21,58 +22,75 @@ section,
 summary {
   display: block;
 }
+
 audio,
 canvas,
 progress,
 video {
   display: inline-block;
 }
+
 audio:not([controls]) {
   display: none;
   height: 0;
 }
+
 progress {
   vertical-align: baseline;
 }
+
 [hidden],
 template {
   display: none;
 }
+
 a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
   text-decoration: none;
-  color: #1B75BB;
+  color: #006DC2;
   font-weight: 700;
 }
+
 a:active,
 a:hover {
   outline-width: 0;
 }
+
+a:hover {
+  text-decoration: underline;
+}
+
 abbr[title] {
   border-bottom: none;
   text-decoration: underline;
   text-decoration: underline dotted;
 }
+
 b,
 strong {
   font-weight: inherit;
   font-weight: bolder;
 }
+
 dfn {
   font-style: italic;
 }
+
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
 }
+
 mark {
   background-color: #ff0;
   color: #000;
 }
+
 small {
   font-size: 80%;
 }
+
 sub,
 sup {
   font-size: 75%;
@@ -80,18 +98,23 @@ sup {
   position: relative;
   vertical-align: baseline;
 }
+
 sub {
   bottom: -0.25em;
 }
+
 sup {
   top: -0.5em;
 }
+
 img {
   border-style: none;
 }
+
 svg:not(:root) {
   overflow: hidden;
 }
+
 code,
 kbd,
 pre,
@@ -99,14 +122,17 @@ samp {
   font-family: monospace, monospace;
   font-size: 1em;
 }
+
 figure {
   margin: 1em 40px;
 }
+
 hr {
   box-sizing: content-box;
   height: 0;
   overflow: visible;
 }
+
 button,
 input,
 optgroup,
@@ -115,23 +141,28 @@ textarea {
   font: inherit;
   margin: 0;
 }
+
 optgroup {
   font-weight: 700;
 }
+
 button,
 input {
   overflow: visible;
 }
+
 button,
 select {
   text-transform: none;
 }
+
 [type='reset'],
 [type='submit'],
 button,
 html [type='button'] {
   -webkit-appearance: button;
 }
+
 [type='button']::-moz-focus-inner,
 [type='reset']::-moz-focus-inner,
 [type='submit']::-moz-focus-inner,
@@ -139,17 +170,20 @@ button::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
+
 [type='button']:-moz-focusring,
 [type='reset']:-moz-focusring,
 [type='submit']:-moz-focusring,
 button:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
+
 fieldset {
   border: 1px solid silver;
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em;
 }
+
 legend {
   box-sizing: border-box;
   color: inherit;
@@ -158,51 +192,63 @@ legend {
   padding: 0;
   white-space: normal;
 }
+
 textarea {
   overflow: auto;
 }
+
 [type='checkbox'],
 [type='radio'] {
   box-sizing: border-box;
   padding: 0;
 }
+
 [type='number']::-webkit-inner-spin-button,
 [type='number']::-webkit-outer-spin-button {
   height: auto;
 }
+
 [type='search'] {
   -webkit-appearance: textfield;
   outline-offset: -2px;
 }
+
 [type='search']::-webkit-search-cancel-button,
 [type='search']::-webkit-search-decoration {
   -webkit-appearance: none;
 }
+
 ::-webkit-input-placeholder {
   color: inherit;
   opacity: 0.54;
 }
+
 ::-webkit-file-upload-button {
   -webkit-appearance: button;
   font: inherit;
 }
+
 html {
   font: 112.5%/1.45em georgia, serif;
   box-sizing: border-box;
   overflow-y: scroll;
 }
+
 * {
   box-sizing: inherit;
 }
+
 *:before {
   box-sizing: inherit;
 }
+
 *:after {
   box-sizing: inherit;
 }
+
 body {
   color: hsla(0, 0%, 0%, 0.8);
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
@@ -211,6 +257,7 @@ body {
   -webkit-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
   font-feature-settings: 'kern', 'liga', 'clig', 'calt';
 }
+
 img {
   max-width: 100%;
   margin-left: 0;
@@ -222,6 +269,7 @@ img {
   padding-top: 0;
   margin-bottom: 1.45rem;
 }
+
 h1 {
   margin-left: 0;
   margin-right: 0;
@@ -235,9 +283,10 @@ h1 {
   text-rendering: optimizeLegibility;
   font-size: 36px;
   line-height: 1.1;
-  color: #1f2125;
+  color: #00527F;
   font-weight: 700;
 }
+
 h2 {
   margin-left: 0;
   margin-right: 0;
@@ -252,7 +301,7 @@ h2 {
   text-rendering: optimizeLegibility;
   font-size: 32px;
   line-height: 1.1;
-  color: #1f2125;
+  color: #00527F;
   margin: 20px 0;
 }
 
@@ -270,8 +319,9 @@ h3 {
   text-rendering: optimizeLegibility;
   line-height: 1.1;
   font-size: 20px;
-color: #bf3116;
+  color: #bf3116;
 }
+
 h4 {
   margin-left: 0;
   margin-right: 0;
@@ -289,6 +339,7 @@ h4 {
   font-size: 1rem;
   line-height: 1.1;
 }
+
 h5 {
   margin-left: 0;
   margin-right: 0;
@@ -306,6 +357,7 @@ h5 {
   font-size: 0.85028rem;
   line-height: 1.1;
 }
+
 h6 {
   margin-left: 0;
   margin-right: 0;
@@ -323,6 +375,7 @@ h6 {
   font-size: 0.78405rem;
   line-height: 1.1;
 }
+
 hgroup {
   margin-left: 0;
   margin-right: 0;
@@ -333,6 +386,7 @@ hgroup {
   padding-top: 0;
   margin-bottom: 1.45rem;
 }
+
 ul {
   margin-left: 1.45rem;
   margin-right: 0;
@@ -345,6 +399,7 @@ ul {
   list-style-position: outside;
   list-style-image: none;
 }
+
 ol {
   margin-left: 1.45rem;
   margin-right: 0;
@@ -357,6 +412,7 @@ ol {
   list-style-position: outside;
   list-style-image: none;
 }
+
 dl {
   margin-left: 0;
   margin-right: 0;
@@ -367,6 +423,7 @@ dl {
   padding-top: 0;
   margin-bottom: 1.45rem;
 }
+
 dd {
   margin-left: 0;
   margin-right: 0;
@@ -377,6 +434,7 @@ dd {
   padding-top: 0;
   margin-bottom: 1.45rem;
 }
+
 p {
   margin-left: 0;
   margin-right: 0;
@@ -390,6 +448,7 @@ p {
   line-height: 1.6;
   color: #2e3138;
 }
+
 figure {
   margin-left: 0;
   margin-right: 0;
@@ -400,6 +459,7 @@ figure {
   padding-top: 0;
   margin-bottom: 1.45rem;
 }
+
 pre {
   margin-left: 0;
   margin-right: 0;
@@ -413,6 +473,7 @@ pre {
   word-wrap: normal;
   padding: 1.45rem;
 }
+
 table {
   margin-left: 0;
   margin-right: 0;
@@ -427,6 +488,7 @@ table {
   border-collapse: collapse;
   width: 100%;
 }
+
 fieldset {
   margin-left: 0;
   margin-right: 0;
@@ -437,6 +499,7 @@ fieldset {
   padding-top: 0;
   margin-bottom: 1.45rem;
 }
+
 blockquote {
   margin-left: 1.45rem;
   margin-right: 1.45rem;
@@ -447,6 +510,7 @@ blockquote {
   padding-top: 0;
   margin-bottom: 1.45rem;
 }
+
 form {
   margin-left: 0;
   margin-right: 0;
@@ -457,6 +521,7 @@ form {
   padding-top: 0;
   margin-bottom: 1.45rem;
 }
+
 noscript {
   margin-left: 0;
   margin-right: 0;
@@ -467,6 +532,7 @@ noscript {
   padding-top: 0;
   margin-bottom: 1.45rem;
 }
+
 iframe {
   margin-left: 0;
   margin-right: 0;
@@ -477,6 +543,7 @@ iframe {
   padding-top: 0;
   margin-bottom: 1.45rem;
 }
+
 hr {
   margin-left: 0;
   margin-right: 0;
@@ -490,6 +557,7 @@ hr {
   border: none;
   height: 1px;
 }
+
 address {
   margin-left: 0;
   margin-right: 0;
@@ -500,77 +568,98 @@ address {
   padding-top: 0;
   margin-bottom: 1.45rem;
 }
+
 b {
   font-weight: bold;
 }
+
 strong {
   font-weight: bold;
 }
+
 dt {
   font-weight: bold;
 }
+
 th {
   font-weight: bold;
 }
+
 li {
   margin-bottom: calc(1.45rem / 2);
 }
+
 ol li {
   padding-left: 0;
 }
+
 ul li {
   padding-left: 0;
 }
-li > ol {
+
+li>ol {
   margin-left: 1.45rem;
   margin-bottom: calc(1.45rem / 2);
   margin-top: calc(1.45rem / 2);
 }
-li > ul {
+
+li>ul {
   margin-left: 1.45rem;
   margin-bottom: calc(1.45rem / 2);
   margin-top: calc(1.45rem / 2);
 }
+
 blockquote *:last-child {
   margin-bottom: 0;
 }
+
 li *:last-child {
   margin-bottom: 0;
 }
+
 p *:last-child {
   margin-bottom: 0;
 }
-li > p {
+
+li>p {
   margin-bottom: calc(1.45rem / 2);
 }
+
 code {
   font-size: 0.85rem;
   line-height: 1.45rem;
 }
+
 kbd {
   font-size: 0.85rem;
   line-height: 1.45rem;
 }
+
 samp {
   font-size: 0.85rem;
   line-height: 1.45rem;
 }
+
 abbr {
   border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
   cursor: help;
 }
+
 acronym {
   border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
   cursor: help;
 }
+
 abbr[title] {
   border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
   cursor: help;
   text-decoration: none;
 }
+
 thead {
   text-align: left;
 }
+
 td,
 th {
   text-align: left;
@@ -584,14 +673,17 @@ th {
   padding-top: 0.725rem;
   padding-bottom: calc(0.725rem - 1px);
 }
+
 th:first-child,
 td:first-child {
   padding-left: 0;
 }
+
 th:last-child,
 td:last-child {
   padding-right: 0;
 }
+
 tt,
 code {
   background-color: hsla(0, 0%, 0%, 0.04);
@@ -602,10 +694,12 @@ code {
   padding-top: 0.2em;
   padding-bottom: 0.2em;
 }
+
 pre code {
   background: none;
   line-height: 1.42;
 }
+
 code:before,
 code:after,
 tt:before,
@@ -613,6 +707,7 @@ tt:after {
   letter-spacing: -0.2em;
   content: ' ';
 }
+
 pre code:before,
 pre code:after,
 pre tt:before,
@@ -620,24 +715,23 @@ pre tt:after {
   content: '';
 }
 
-ul.top-menu{
+ul.top-menu {
   float: right;
   margin: 5px -15px 0 0;
-
 }
 
-ul.top-menu li{
+ul.top-menu li {
   float: left;
   list-style: none;
 }
 
 ul.top-menu li a {
-    display: block;
-    color: #5c6270;
-    text-transform: uppercase;
-    font-weight: 400;
-    padding: 10px 15px;
-    font-size: 14px;
+  display: block;
+  color: #5c6270;
+  text-transform: uppercase;
+  font-weight: 400;
+  padding: 10px 15px;
+  font-size: 14px;
 }
 
 .wrapper {
@@ -648,8 +742,7 @@ ul.top-menu li a {
   justify-content: space-between;
 }
 
-.wrapper > .main {
-  display: flex;
+.wrapper>.main {
   flex-direction: column;
   flex-basis: 100%;
   flex: 1;
@@ -657,12 +750,16 @@ ul.top-menu li a {
   width: 60%;
 }
 
-.wrapper > .sidenav{
+.wrapper>.sidenav {
   position: -webkit-sticky;
-position: sticky;
-top: 20px;
-height: 600px;
+  position: sticky;
+  top: 20px;
+  height: 600px;
+}
 
+img.float-right {
+  float: right;
+  margin-left: 20px;
 }
 
 .date-text {
@@ -674,43 +771,66 @@ height: 600px;
 }
 
 .header {
-    margin: 0 auto;
-    max-width: 1001px;
-    height: 87px;
-    padding: 8px 15px 0;
+  margin: 0 auto;
+  max-width: 1001px;
+  height: 87px;
+  padding: 8px 15px 0;
 }
 
 .content-page {
-    margin: 0 auto;
-    max-width: 1001px;
-    padding: 2px 15px 1.45rem;
+  margin: 0 auto;
+  max-width: 1001px;
+  padding: 2px 15px 1.45rem;
 }
 
-footer{
+footer {
   margin-top: 30px;
   padding: 60px 0 40px;
   margin-top: 30px;
   background: #2e3138;
 }
-footer .content{
-    margin: 0 auto;
-    max-width: 1001px;
+
+footer .content {
+  margin: 0 auto;
+  max-width: 1001px;
 }
-footer p{
+
+footer p {
   color: #abb0ba;
   font-size: 14px;
 }
 
-footer hr{
+footer hr {
   margin: 20px 0;
   border-top: 1px solid #454a54;
 }
+
 footer a, footer a:hover, footer a:visited {
-    color: #abb0ba;
-    font-weight: 400;
+  color: #abb0ba;
+  font-weight: 400;
 }
-footer a:hover{
+
+footer a:hover {
   text-decoration: underline;
+}
+
+.btn {
+  background: rgb(0, 82, 127) none repeat scroll 0 0;
+  border-color: rgb(0, 82, 127);
+  border-radius: 6px;
+  color: #fff !important;
+  font-size: 24px;
+  line-height: 1.33333;
+  margin-bottom: 30px;
+  padding: 10px 16px;
+  white-space: normal;
+}
+
+.btn:hover {
+  text-decoration: none;
+  background-color: #062436;
+  border-color: #062436;
+  color: #fff;
 }
 
 @media only screen and (max-width: 480px) {
@@ -718,19 +838,36 @@ footer a:hover{
     font-size: 100%;
   }
 }
-@media (max-width: 890px){
+
+@media (max-width: 890px) {
   .hidden-xs {
-      display: none!important;
-  }
-  .header{
-      height: 73px;
+    display: none !important;
   }
 
-  .header img{
+  .header {
+    height: 73px;
+  }
+
+  .header img {
     width: 285px;
   }
 
-  h1{
-      font-size: 24px;
+  h1 {
+    font-size: 24px;
+  }
+
+  .wrapper>.main {
+    padding-right: 0;
+    width: 100%;
+  }
+
+  .wrapper>.sidenav {
+    width: 100%;
+  }
+
+  img.float-right {
+    margin-left: 0;
+    float: none;
+    margin-bottom: 18px;
   }
 }
