--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -2,6 +2,7 @@ html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
@@ -48,8 +49,8 @@ a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
   text-decoration: none;
-  color: #354eaa;
-  font-weight: 700;
+  color: #a98d14;
+  font-weight: 500;
 }
 
 a:active,
@@ -256,6 +257,8 @@ body {
   -ms-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
   -webkit-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
   font-feature-settings: 'kern', 'liga', 'clig', 'calt';
+  overflow: initial;
+  background: #f7f7f7;
 }
 
 img {
@@ -319,7 +322,6 @@ h3 {
   text-rendering: optimizeLegibility;
   line-height: 1.1;
   font-size: 20px;
-  color: #bf3116;
 }
 
 h4 {
@@ -734,83 +736,51 @@ ul.top-menu li a {
   font-size: 14px;
 }
 
-.wrapper {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 100%;
-  justify-content: space-between;
-}
-
-.wrapper>.main {
-  flex-direction: column;
-  flex-basis: 100%;
-  flex: 1;
-  padding-right: 35px;
-  width: 60%;
-  margin-bottom: 40px;
-}
-
-.wrapper>.sidenav {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 20px;
-  height: 730px;
-  width: 300px;
-}
-
 img.float-right {
   float: right;
   margin-left: 18px;
   margin-bottom: 18px;
 }
 
-.date-text {
-  border-bottom: 1px solid #ebecef;
-  padding-bottom: 10px;
-  color: #5c6270;
-  font-size: 14px;
-  margin: 0 0 20px 0;
-}
-
 .header {
   margin: 0 auto;
-  max-width: 1001px;
+  max-width: 722px;
   height: 87px;
   padding: 8px 15px 0;
 }
 
 .content-page {
   margin: 0 auto;
-  max-width: 1001px;
-  padding: 2px 15px 1.45rem;
+  max-width: 722px;
 }
 
 footer {
   margin-top: 30px;
-  padding: 60px 0 40px;
-  margin-top: 30px;
-  background: #2e3138;
 }
 
 footer .content {
   margin: 0 auto;
-  max-width: 1001px;
+  max-width: 722px;
+  text-align: center;
+  margin-bottom: 10px;
+  padding: 10px;
 }
 
-footer p {
-  color: #abb0ba;
+footer p, footer a, footer ul, footer li {
+  color: #000;
   font-size: 14px;
+  font-weight: normal;
+  margin: 0;
 }
 
-footer hr {
-  margin: 20px 0;
-  border-top: 1px solid #454a54;
+footer ul, footer li {
+  list-style: none;
+  display: inline;
 }
 
-footer a, footer a:hover, footer a:visited {
-  color: #abb0ba;
-  font-weight: 400;
+footer span {
+  margin: 5px;
+  opacity: 0.5;
 }
 
 footer a:hover {
@@ -836,45 +806,119 @@ footer a:hover {
   color: #fff;
 }
 
-@media only screen and (max-width: 480px) {
-  html {
-    font-size: 100%;
+.box {
+  margin-top: 100px;
+  border-color: rgb(117, 208, 243);
+  outline: none;
+  background-color: rgb(255, 255, 255);
+  opacity: 1;
+  position: relative;
+  top: 0px;
+  border-width: 3px;
+  border-style: dashed;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.3);
+  padding: 50px 50px 40px;
+  -webkit-animation: slide-in-top 0.5s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+  animation: slide-in-top 0.5s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+}
+
+.box h1 {
+  text-align: center;
+  color: rgb(64, 142, 173);
+  line-height: normal;
+  font-size: 37px;
+  font-family: sans-serif !important;
+  font-weight: 700;
+  margin: 0 10px;
+}
+
+.box h3 {
+  text-align: center;
+  color: rgba(136, 136, 136, 0.77);
+  font-size: 21px;
+  font-family: 'Droid Sans', sans-serif !important;
+}
+
+.btn-blue {
+  color: rgb(255, 255, 255);
+  background-color: rgb(117, 208, 243);
+  text-decoration: none;
+  border-bottom: 3px solid rgba(0, 0, 0, 0.2);
+  border-left: none;
+  border-right: none;
+  width: 100%;
+  display: block;
+  text-align: center;
+  padding: 26px 10px;
+  font-size: 35px;
+  font-family: sans-serif;
+  margin-bottom: 8px;
+  font-weight: bold;
+  letter-spacing: 1.5px;
+}
+
+.btn-blue:hover {
+  text-decoration: none;
+  background: #00c4f4;
+}
+
+/**
+ * ----------------------------------------
+ * Mobile Devices
+ * ----------------------------------------
+ */
+@media (max-width: 890px) {
+  .box {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .btn-blue {
+    border-radius: 5px;
+    font-size: 20px;
+    padding: 20px 20px 15px;
+    font-weight: 400;
+  }
+
+  footer p, footer a {
+    font-size: 12px;
+  }
+
+  footer p {
+    margin-bottom: -5px;
   }
 }
 
-@media (max-width: 890px) {
-  .hidden-xs {
-    display: none !important;
+/**
+ * ----------------------------------------
+ * animation slide-in-top
+ * ----------------------------------------
+ */
+@-webkit-keyframes slide-in-top {
+  0% {
+    -webkit-transform: translateY(-1000px);
+    transform: translateY(-1000px);
+    opacity: 0;
   }
 
-  .header {
-    height: 73px;
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slide-in-top {
+  0% {
+    -webkit-transform: translateY(-1000px);
+    transform: translateY(-1000px);
+    opacity: 0;
   }
 
-  .header img {
-    width: 285px;
-  }
-
-  h1 {
-    font-size: 24px;
-  }
-
-  .wrapper>.main {
-    padding-right: 0;
-    width: 100%;
-  }
-
-  .wrapper>.sidenav {
-    width: 100%;
-  }
-
-  img.float-right {
-    margin-left: 0;
-    float: none;
-    margin-bottom: 18px;
-  }
-
-  footer {
-    padding: 30px 20px 20px
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
   }
 }
